# SPECTRAX

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Energy.py  Examples.py  Examples_1D.py  Examples_2D.py  JAX_VM_solver.py  README.md  Run_JAX_VM_solver.py  landau_hermite_jax.py  landau_hermite_jax_companion.tex  paper.bib  paper.md  plasma_parameters.json  plasma_parameters_Kelvin_Helmholtz_1D.json  plasma_parameters_Kelvin_Helmholtz_2D.json  plasma_parameters_Landau_damping_1D.json  plasma_parameters_Landau_damping_HF_1D.json  plasma_parameters_density_perturbation.json  plasma_parameters_ion_acoustic_wave_HF_1D.json  plasma_parameters_two_stream_instability_1D.json  pressure_anisotropy_1D.json  pyproject.toml  requirements.txt
Examples/: 1D_Landau_damping.py  1D_Landau_damping_dr_curve.py  1D_Weibel.py  1D_free_streaming.py  1D_two_stream.py  1D_two_stream_gr_curve.py  1D_two_stream_instability.py  2D_Orszag_Tang.py  damping_rate_1836.csv  growth_rate.csv  input_1D_Weibel.toml  input_1D_free_streaming.toml  input_1D_landau_damping.toml  input_1D_landau_damping_dr_curve.toml  input_1D_two_stream.toml  input_1D_two_stream_gr_curve.toml  input_2D_orszag_tang.toml  orszag_tang_data_analysis.py
Vlasov-MaxwellSpectralSolver/: Energy.py  JAX_VM_solver.py  energy_entropy.py  initialize_in_xv_space.py  inverse_transform.py
collisions/: landau_hermite_jax.py  landau_hermite_jax_companion.tex  landau_hermite_jax_companion_results.tex  landau_hermite_jax_help.txt
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
latest/: summary.json
(+50 files in other folders)
