[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spectrax"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "spectrax/version.py"

[project]
name = "spectrax"
description = "SPECTRAX: Hermite-Fourier Vlasov solver in JAX"
readme = "README.md"
authors = [{ name = "UWPlasma, UW-Madison group", email = "rogerio.jorge@wisc.edu" }]
license = { file = "LICENSE" }
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Plasma", 
     "Physics", 
     "Simulation",
     "JAX"]
 
dependencies = [ "jax", "jaxlib", "jax_tqdm", "matplotlib"]
 
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/uwplasma/SPECTRAX"

[project.scripts]
spectrax = "spectrax.__main__:main"
 